--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
     <!--- CSS -->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
     <!-- JS -->
 
@@ -24,30 +26,30 @@
     <header>
         <div class="container">
 
-            <div class="nav-logo">
-                <a href="index.html"><img src="images/Logo.png" alt="logo"></a>
+            <div class="nav-logo  animated fadeInDown">
+                <a href="index.html"><img src="images/logo-final.png" alt="logo"></a>
             </div>
 
-            <div class="nav-menu">
-                <a href="index.html" class="nav-menu-link">Home</a>
-                <a href="#" class="nav-menu-link">About Us</a>
-                <a href="#" class="nav-menu-link">Projects</a>
-                <a href="#" class="nav-menu-link">Enquiry</a>
-                <a href="#" class="nav-menu-link">Contact Us</a>
+            <div class="nav-menu ">
+                <a href="index.html" class="nav-menu-link" style="text-decoration: none;">Home</a>
+                <a href="#about-us" class="nav-menu-link" style="text-decoration: none;">About Us</a>
+                <a href="#projects" class="nav-menu-link" style="text-decoration: none;">Projects</a>
+                <a href="#enquiry" class="nav-menu-link" style="text-decoration: none;">Enquiry</a>
+                <a href="#contact" class="nav-menu-link" style="text-decoration: none;">Contact Us</a>
             </div>
 
             <div class="nav-burger">
-                <a href="#" class="nav-burger-link">
+                <a class="nav-burger-link">
                     <span class="nav-burger-item "></span>
                 </a>
             </div>
 
         </div>
     </header>
-
-    <section class="intro">
+    <!-- INTRO START -->
+    <section class="intro ">
         <div class="container">
-            <div class="intro-heading">
+            <div class="intro-heading animated fadeInRight">
                 <h1>Low Cost Solutions,</h1>
                 <h1>High Value Services</h1>
                 <p>PRIME Engineering Provides customer-driven solutions to various engineering problems, finding unique opportunities for advancing potential, and strive for the highest success for our clients. We are promoted by technocrats and are aiming
@@ -55,20 +57,24 @@
             </div>
         </div>
     </section>
+    <!-- INTRO END -->
 
-    <section class="aboutus">
+    <!-- ABOUTUS START -->
+    <section class="aboutus" id="about-us">
         <div class="container">
-            <h1>About Us</h1>
-            <h3>Welcome to PRIME Engineering & Energy Services</h3>
+            <h1 data-aos="fade-up">About Us</h1>
+            <h3 data-aos="fade-up">Welcome to PRIME Engineering & Energy Services</h3>
             <div class="aboutus-detail">
-                <p>A company that provides sustainable engineering solutions in fields of process, utility, off-sites and plant operations.</p>
-                <p>Our engineering services help business clients to optimize their capital investment for process-utility integration, expansion, renovation, retrofitting, revamping and facility augmentation, and Integration of maintenance with energy management.</p>
-                <p>Energy efficient and eco-friendly solutions help industry to achieve better resource utilization with the double benefits of improved profit / realize cost reduction and clean environment.</p>
-                <p>Innovative value adding approach, Good Engineering Practices, International Codes & Standards and Best Industrial/Factory Norms are being used for developing engineering deliverables to implement engineering solutions in field.</p>
+                <p data-aos="fade-up">A company that provides sustainable engineering solutions in fields of process, utility, off-sites and plant operations.</p>
+                <p data-aos="fade-up">Our engineering services help business clients to optimize their capital investment for process-utility integration, expansion, renovation, retrofitting, revamping and facility augmentation, and Integration of maintenance with energy management.</p>
+                <p data-aos="fade-up">Energy efficient and eco-friendly solutions help industry to achieve better resource utilization with the double benefits of improved profit / realize cost reduction and clean environment.</p>
+                <p data-aos="fade-up">Innovative value adding approach, Good Engineering Practices, International Codes & Standards and Best Industrial/Factory Norms are being used for developing engineering deliverables to implement engineering solutions in field.</p>
+                <p data-aos="fade-up">Owns high quality modern infrastructure, Software tools, AutoCAD, Condition monitoring and Diagnostic Instruments, highly qualified multi-disciplinary professionals & associates, professionally managed and trained manpower for providing
+                    world class Engineering & Energy audit services</p>
             </div>
-            <h3>Spectrums of Engineering Services Provided by PRIME Engineering & Energy Services are:</h3>
+            <h3 data-aos="fade-up">Spectrums of Engineering Services Provided by PRIME Engineering & Energy Services are:</h3>
 
-            <div class="aboutus-cards">
+            <div class="aboutus-cards" data-aos="fade-up">
 
                 <div class="aboutus-card grow">
                     <div class="card-image">
@@ -76,13 +82,14 @@
                     </div>
                     <h2>Pre-Engineering Studies</h2>
                     <div class="card-detail">
+
                         <p>Energy Auditing & Guestimate saving opportunities</p>
+                        <p>Project Feasiblity/ Viability Study</p>
                         <p>Equipment Technical Health Check-up</p>
                         <p>Equipment Utilization/Effectiveness Studies</p>
                         <p> Equipment Performance Assessment</p>
                         <p>Process/Systems developmental Studies</p>
-                        <p>Process-Utility</p>
-                        <p>Integration Studies</p>
+                        <p>Process-Utility Integration Studies</p>
                         <p>Utility Gap Analysis and Improvement Suggestions</p>
                         <p>BVOA Analysis</p>
                     </div>
@@ -94,20 +101,20 @@
                     </div>
                     <h2>Plant Engineering Services</h2>
                     <div class="card-detail">
-                        <p>Engineering Drawing and Drafting work in AutoCAD, As-built drawings</p>
                         <p> Drafting of PFDs, P&IDs, Equipment/Plant Layout, Piping Layout and BOM/BOQ</p>
-                        <p> Machine and Machine components drawing </p>
-                        <p> Detailed Engineering (Concept to Commissioning)</p>
                         <p> Design basis & Conceptual Schemes</p>
                         <p> Design calculations,sizing and selection of Equipment</p>
-                        <p> Enquiry Specifications, data sheets, RFQ, URS</p>
-                        <p>Skid and Modular Utility designs</p>
+                        <p> Enquiry Specifications, Technical data sheets, RFQ, URS</p>
+                        <p> Detailed Engineering (Concept to Commissioning)</p>
+                        <p> Skid and Modular Process / Utility designs</p>
+                        <p> Engineering Drawing and Drafting work in AutoCAD, As-built drawings</p>
+                        <p> Machine and Machine components drawing </p>
                     </div>
                 </div>
 
                 <div class="aboutus-card grow">
                     <div class="card-image">
-                        <img src="images/Icons/energy.png" alt="">
+                        <img src="images/Icons/utility.png" alt="">
                     </div>
                     <h2>Energy Management Services</h2>
                     <div class="card-detail">
@@ -126,13 +133,13 @@
 
                 <div class="aboutus-card grow">
                     <div class="card-image">
-                        <img src="images/Icons/utility.png" alt="">
+                        <img src="images/Icons/energy.png" alt="">
                     </div>
                     <h2>Utility & Off-Sites Engineering Services</h2>
                     <div class="card-detail">
                         <p>Technological Up-gradation of existing Utility for Cost Reduction</p>
                         <p>Design, Sizing, Selection and Detailing of Generation, Distribution, and Utilization of Utilities such as – Steam & Condensate Recovery System, Thermic Fluid/Oil Heating System, Thermo-siphon/ Hot Water System, Chilled Water &
-                            Cooling Water System,WHRB etc.</p>
+                            Cooling Water System, WHRB, PNG / H2 Station, N2 Plant, HVAC Systems etc.</p>
                         <p>Design, Sizing, Selection and Detailing of Chemicals/Fuels loading, unloading, storage, and distribution, Tank Farm facility development, Liquid/ Solid / Powder Materials Handling facility development</p>
                     </div>
                 </div>
@@ -157,39 +164,84 @@
             </div>
         </div>
     </section>
-    <section class="contact-enquiry">
+    <!-- ABOUT US END -->
+    <!-- PROJECTS START -->
+    <section class="project" id="projects">
         <div class="container">
-            <div class="contact">
+            <h1 data-aos="fade-up">Projects</h1>
+            <h3 data-aos="fade-up">Check out our Projects</h3>
+            <div class="cols">
+                <div class="rows">
+                    <a href="./images/project/project-1.jpg"><img data-aos="fade-up" src="./images/project/project-1.jpg"></a>
+                    <a href="./images/project/project-7.png"><img data-aos="fade-up" src="./images/project/project-7.png"></a>
+                    <a href="./images/project/project-2.jpg"><img data-aos="fade-up" src="./images/project/project-2.jpg"></a>
+                    <a href="./images/project/project-8.jpg"><img data-aos="fade-up" src="./images/project/project-8.jpg"></a>
+                </div>
+            </div>
+            <div class="cols">
+                <div class="rows">
+                    <a href="./images/project/project-9.png"><img data-aos="fade-up" src="./images/project/project-9.png"></a>
+                    <a href="./images/project/project-5.jpg"><img data-aos="fade-up" src="./images/project/project-5.jpg"></a>
+                    <a href="./images/project/project-10.png"><img data-aos="fade-up" src="./images/project/project-10.png"></a>
+                    <a href="./images/project/project-11.png"><img data-aos="fade-up" src="./images/project/project-11.png"></a>
+                </div>
+            </div>
+            <div class="cols">
+                <div class="rows">
+                    <a href="./images/project/project-3.jpg"><img data-aos="fade-up" src="./images/project/project-3.jpg"></a>
+                    <a href="./images/project/project-6.png"><img data-aos="fade-up" src="./images/project/project-6.png"></a>
+                    <a href="./images/project/project-4.jpg"><img data-aos="fade-up" src="./images/project/project-4.jpg"></a>
+                    <a href="./images/project/project-12.png"><img data-aos="fade-up" src="./images/project/project-12.png"></a>
+                </div>
+            </div>
+        </div>
+        <div class="container" data-aos="fade-up">
+            <a href="project.html"><button class="btn" onclick=""> check out more</button></a>
+        </div>
+
+    </section>
+    <!-- PROJECTS END -->
+    <!-- CONTACT START -->
+    <section class="contact-enquiry" id="contactenquiry">
+        <div class="container">
+            <div class="contact" id="contact" data-aos="fade-up">
                 <div class="name">
                     <h1>Rajesh Mauny</h1>
-                    <h3>B.E(Mech),M.Tech(Energy Management)<br>Certified Energy Auditor(CEA:20023)</h3>
+                    <h3>B.E(Mech)<br>M.Tech(Energy Management)<br>Certified Energy Auditor(CEA:20023)</h3>
                 </div>
 
-
                 <p>Office : B-401 Shreenath Classic, Natasha Park Resi-II, Nizampura, Vadodara, Gujarat - 390024</p>
-                <p>Contacts : +91 9925012048/ 0256-2760338</p>
+                <p>Contacts : +91 9925012048/ 0265-2760338</p>
                 <p>Email : primeenergy18@gmail.com</p>
                 <img src="images/contact.svg" alt="">
             </div>
-            <div class="enquiry">
+            <div class="enquiry" id="enquiry" data-aos="fade-up">
                 <h2>Enquiry</h2>
-                <form action="">
-                    <input class="form-control" type="text" placeholder="Name">
-                    <input class="form-control" type="text" placeholder="Company Name">
-                    <input class="form-control" type="email" placeholder="Email">
-                    <input class=" form-control" type="text" placeholder="Phone/telephone">
-                    <textarea class=" form-control" name="message" id="message" cols="30" rows="5" placeholder="Your Message"></textarea>
-                    <button type="button" class="btn">Send</button>
+                <!-- action="email.php" -->
+                <form method="POST" name="enquiry_form">
+                    <input name="name" class="form-control" type="text" placeholder="Name" required>
+                    <input name="company-name" class="form-control" type="text" placeholder="Company Name" required>
+                    <input name="email" class="form-control" type="email" placeholder="Email" required>
+                    <input name=" phone" class=" form-control" type="text" placeholder="Phone/telephone" required>
+                    <textarea name="message" class=" form-control" name="message" id="message" cols="30" rows="5" placeholder="Your Message" required></textarea>
+                    <button name="submit" type="submit" class="btn">Send</button>
                 </form>
             </div>
         </div>
     </section>
-
+    <!-- CONTACT END -->
     <footer>
-
+        <div class="container">
+            <h4>Copyright &copy; 2020 Prime Engineering All rights Reserverd. </h4>
+            <h4><a href="http://www.freepik.com">Graphics by studiogstock / Freepik</a></h4>
+        </div>
     </footer>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
     <script src="js/script.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script src="js/removeBanner.js"></script>
 
 </body>
 
